--- a/web.config
+++ b/web.config
@@ -2,13 +2,12 @@
 <configuration>
   <system.webServer>
     <handlers>
-            <add name="Node.js" path="*" verb="*" modules="iisnode" resourceType="File" />
       <add name="iisnode" path="dist/main.js" verb="*" modules="iisnode" />
     </handlers>
     <rewrite>
       <rules>
         <rule name="DynamicContent">
-          <match url="/*" />
+          <match url=".*" />
           <action type="Rewrite" url="dist/main.js" />
         </rule>
       </rules>
@@ -21,5 +20,6 @@
       </requestFiltering>
     </security>
     <httpErrors existingResponse="PassThrough" />
+    <directoryBrowse enabled="true" />
   </system.webServer>
 </configuration>
